# python-step-series

./: .gitignore  .pre-commit-config.yaml  5  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docs/: conf.py  functional-description.rst  index.rst  module-index.rst  module-reference.rst  python-step-series.rst  step-series.rst
docs/api/: modules.rst  stepseries.rst
docs/electromagnetic-brake/submodules/: commands.rst  specifications.rst
docs/locales/ja/LC_MESSAGES/: api.po  electromagnetic-brake.po  index.po  license.po  module-index.po  module-reference.po  portedDocs.po  python-step-series.po  step-series.po
docs/locales/ja_JP/LC_MESSAGES/: api.po  index.mo  license.po  module-index.po  portedDocs.po  python-step-series.mo  python-step-series.po
docs/step-series/: about.rst  index.rst
docs/step-series/submodules/: functional-descriptions.rst  functionality-descriptions.rst  getting-started.rst  other-connections-settings.rst  technical-information.rst
docs/technical-informations/: hardware-step400_en.rst  hardware-step800_en.rst
requirements/: base.txt  dev.txt
src/stepseries/: __init__.py  commands.py  exceptions.py  responses.py  server.py  step400.py  step800.py  stepXXX.py
tests/: conftest.py  test_server.py
tests/commands/: test_electromagnetic_brake_settings.py  test_homing_settings.py  test_motor_driver_settings.py  test_position_management_settings.py  test_speed_profile_settings.py  test_system_settings.py
tests/responses/: test_automatic_messages.py  test_home_limit_sensors_settings.py  test_motor_driver_settings.py  test_position_management_settings.py  test_speed_profile_settings.py  test_system_settings.py
tests/step400/: conftest.py  test_actions.py  test_alarm_settings.py  test_automatic_messages.py  test_electromagnetic_brake_settings.py  test_exceptions.py  test_home_limit_sensors.py  test_home_limit_sensors_settings.py  test_homing_commands.py  test_homing_settings.py  test_motor_control_settings.py  test_motor_driver_settings.py  test_position_management_settings.py  test_servo_mode_settings.py  test_speed_profile_settings.py  test_system_settings.py  test_voltage_current_mode_settings.py
tests/step800/: conftest.py  test_actions.py  test_alarm_settings.py  test_automatic_messages.py  test_electromagnetic_brake.py  test_electromagnetic_brake_settings.py  test_exceptions.py  test_home_limit_sensors.py  test_home_limit_sensors_settings.py  test_homing_commands.py  test_homing_settings.py  test_motor_control_settings.py  test_motor_driver_messages.py  test_motor_driver_settings.py  test_position_management_settings.py  test_servo_mode_settings.py  test_speed_profile_settings.py  test_system_messages.py  test_system_settings.py  test_voltage_current_mode_settings.py
